--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -1,10 +1,147 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+:root,
+.light,
+.light-theme {
+  --lime-1: #b8b9b6;
+  --lime-2: #aeb0ac;
+  --lime-3: #a1a59c;
+  --lime-4: #939a8a;
+  --lime-5: #838c77;
+  --lime-6: #707c60;
+  --lime-7: #596943;
+  --lime-8: #3c501c;
+  --lime-9: #283c00;
+  --lime-10: #3b4f1a;
+  --lime-11: #112100;
+  --lime-12: #303825;
+
+  --lime-a1: #c190fe40;
+  --lime-a2: #8529ff25;
+  --lime-a3: #4202932c;
+  --lime-a4: #2002473a;
+  --lime-a5: #0e011c4c;
+  --lime-a6: #070a0265;
+  --lime-a7: #15240093;
+  --lime-a8: #223700d2;
+  --lime-a9: #283c00;
+  --lime-a10: #243801d6;
+  --lime-a11: #112100;
+  --lime-a12: #080d00c4;
+
+  --lime-contrast: #fff;
+  --lime-surface: #adabafcc;
+  --lime-indicator: #283c00;
+  --lime-track: #283c00;
+
+  --gray-1: #b7b8b7;
+  --gray-2: #adb1ad;
+  --gray-3: #a0a49f;
+  --gray-4: #939793;
+  --gray-5: #888c87;
+  --gray-6: #7b817b;
+  --gray-7: #6e736d;
+  --gray-8: #595f58;
+  --gray-9: #2c362b;
+  --gray-10: #232d22;
+  --gray-11: #0f180f;
+  --gray-12: #192319;
+
+  --gray-a1: #bd8eff42;
+  --gray-a2: #833bfe28;
+  --gray-a3: #0000f303;
+  --gray-a4: #2a02713e;
+  --gray-a5: #1f01514c;
+  --gray-a6: #11013b5a;
+  --gray-a7: #0e012b6c;
+  --gray-a8: #06021986;
+  --gray-a9: #010807c2;
+  --gray-a10: #000905ce;
+  --gray-a11: #000902ea;
+  --gray-a12: #000904dc;
+
+  --gray-contrast: #FFFFFF;
+  --gray-surface: #ffffffcc;
+  --gray-indicator: #2c362b;
+  --gray-track: #2c362b;
 }
 
-*, *::before, *::after {
-  box-sizing: border-box;
+:root,
+.light,
+.light-theme,
+.radix-themes {
+  --color-background: #b5c79e;
 }
+
+@supports (color: color(display-p3 1 1 1)) {
+  @media (color-gamut: p3) {
+
+    :root,
+    .light,
+    .light-theme {
+      --lime-1: oklch(78.3% 0.0033 127);
+      --lime-2: oklch(75.5% 0.0059 127);
+      --lime-3: oklch(71.7% 0.0149 127);
+      --lime-4: oklch(67.5% 0.0237 127);
+      --lime-5: oklch(62.7% 0.0335 127);
+      --lime-6: oklch(56.9% 0.0448 127);
+      --lime-7: oklch(49.6% 0.0593 127);
+      --lime-8: oklch(40.2% 0.0807 127);
+      --lime-9: oklch(32.7% 0.089 127);
+      --lime-10: oklch(39.8% 0.0807 127);
+      --lime-11: oklch(22.3% 0.084 127);
+      --lime-12: oklch(32.6% 0.0333 127);
+
+      --lime-a1: color(display-p3 0.7216 0.5412 1 / 0.216);
+      --lime-a2: color(display-p3 0.3608 0 0.9961 / 0.108);
+      --lime-a3: color(display-p3 0.2078 0.0039 0.5216 / 0.167);
+      --lime-a4: color(display-p3 0.0902 0.0039 0.2314 / 0.223);
+      --lime-a5: color(display-p3 0.0392 0.0039 0.0863 / 0.293);
+      --lime-a6: color(display-p3 0.0196 0.0314 0.0039 / 0.389);
+      --lime-a7: color(display-p3 0.0784 0.1255 0 / 0.562);
+      --lime-a8: color(display-p3 0.1216 0.1804 0 / 0.784);
+      --lime-a9: color(display-p3 0.1255 0.1882 0 / 0.926);
+      --lime-a10: color(display-p3 0.1255 0.1843 0 / 0.791);
+      --lime-a11: color(display-p3 0.0667 0.1137 0 / 0.976);
+      --lime-a12: color(display-p3 0.0314 0.0431 0 / 0.76);
+
+      --lime-contrast: #fff;
+      --lime-surface: color(display-p3 0.6784 0.6706 0.6902 / 0.8);
+      --lime-indicator: oklch(32.7% 0.089 127);
+      --lime-track: oklch(32.7% 0.089 127);
+
+      --gray-1: oklch(78.2% 0.0031 143.2);
+      --gray-2: oklch(75.6% 0.0068 143.2);
+      --gray-3: oklch(71.3% 0.0074 143.2);
+      --gray-4: oklch(67.3% 0.0085 143.2);
+      --gray-5: oklch(63.5% 0.0092 143.2);
+      --gray-6: oklch(59.7% 0.0114 143.2);
+      --gray-7: oklch(55% 0.0115 143.2);
+      --gray-8: oklch(47.9% 0.0145 143.2);
+      --gray-9: oklch(31.9% 0.0234 143.2);
+      --gray-10: oklch(28.4% 0.0237 143.2);
+      --gray-11: oklch(19.6% 0.0226 143.2);
+      --gray-12: oklch(24.2% 0.0228 143.2);
+
+      --gray-a1: color(display-p3 0.7059 0.5373 1 / 0.226);
+      --gray-a2: color(display-p3 0.3922 0.0863 1 / 0.119);
+      --gray-a3: color(display-p3 0.2 0.0039 0.5686 / 0.172);
+      --gray-a4: color(display-p3 0.1294 0.0039 0.3882 / 0.238);
+      --gray-a5: color(display-p3 0.0941 0.0039 0.2706 / 0.293);
+      --gray-a6: color(display-p3 0.0471 0.0039 0.2 / 0.349);
+      --gray-a7: color(display-p3 0.0392 0.0039 0.1412 / 0.42);
+      --gray-a8: color(display-p3 0.0157 0 0.0863 / 0.521);
+      --gray-a9: color(display-p3 0 0.0196 0.0157 / 0.75);
+      --gray-a10: color(display-p3 0 0.0235 0.0118 / 0.799);
+      --gray-a11: color(display-p3 0 0.0275 0.0039 / 0.908);
+      --gray-a12: color(display-p3 0 0.0275 0.0078 / 0.854);
+
+      --gray-contrast: #FFFFFF;
+      --gray-surface: color(display-p3 1 1 1 / 80%);
+      --gray-indicator: oklch(31.9% 0.0234 143.2);
+      --gray-track: oklch(31.9% 0.0234 143.2);
+    }
+  }
+}
+
 * {
   margin: 0;
 }
